package behavior.observer.ca3;

public interface NhaDauTuListener {
    public void capNhat(double tiGia);
}
